<resources>
    <string name="app_name">BreizhCamp Countdown</string>


    <string name="main_button_start">Démarrer</string>
    <string name="main_duration_hint">Durée de la conférerence (min) :</string>

    <string name="title_activity_countdown">CountDown</string>

    <string name="menu_action_settings">Settings</string>

    <string name="count_downt_times_up">Time\'s up !</string>

    <string name="conf_title">Configurations</string>
    <string name="conf_title_activity">Configurations</string>
    <string name="conf_label_url_logo">Url du logo : </string>
    <string name="conf_default_logo_url">http://www.breizhcamp.org/img/logo.png</string>
    <string name="conf_button_preview">Preview</string>
    <string name="conf_dummy_text_size">42</string>
    <string name="conf_rotate_image_button">Pivoter de 90°</string>
    <string name="conf_save_button">Sauvegarder</string>
</resources>
