<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="fr.serli.breizhcampcountdown.app.ConfigurationActivity">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView android:id="@+id/conf_title"
                      android:text="@string/conf_title"
                      android:textAppearance="?android:textAppearanceLarge"
                      android:gravity="center|top"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textAppearance="?android:textAppearanceMedium"
                      android:text="@string/conf_label_url_logo"
                      android:layout_marginTop="10dp"/>

            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="10dp">

                <EditText android:id="@+id/conf_text_url"
                          android:layout_weight="1"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:inputType="textUri"/>

                <Button android:id="@+id/conf_preview_button"
                        android:text="@string/conf_button_preview"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageView android:id="@+id/conf_image_preview"
                       android:layout_gravity="center"
                       android:layout_marginTop="15dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"/>
            
            <CheckBox
                android:id="@+id/conf_rotate_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conf_rotate_image_button"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_marginTop="15dp">

                <SeekBar android:id="@+id/conf_seekbar"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="2"
                         android:max="100"
                         android:focusable="true"/>

                <TextView android:id="@+id/conf_text_preview"
                          android:layout_width="match_parent"
                          android:layout_weight="1"
                          android:layout_height="0dp"
                          android:text="@string/conf_dummy_text_size"
                          android:textSize="120sp"/>

            </LinearLayout>

            <Button android:id="@+id/conf_save_button"
                    android:text="@string/conf_save_button"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
